# reflection

./: CMakeLists.txt  LICENSE  conanfile.txt
pkg/: reflection-config.cmake.in
sys/: int32.cpp  int32.h  object.cpp  object.h  type.cpp  type.h  value_type.h
sys/reflection/: icustom_attribute_provider.h  member_info.cpp  member_info.h
tests/: CMakeLists.txt  conanfile.txt  type_test.cpp
vs/include/: object.h  type.h  value_type.h
vs/include/reflection/: icustom_attribute_provider.h  member_info.h
vs/src/: object.cpp  type.cpp
vs/src/reflection/: member_info.cpp
